[package]
name = "att"
version = "0.1.0"
authors = ["Javier Galarza <jegj57@gmail.com>"]
description = "Another Time Tracker for simple tasks"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
anyhow = "1.0.41"
thiserror = "1.0.25"
humantime = "2.1.0"
chrono = "0.4.7"